--- a/public/css/site.css
+++ b/public/css/site.css
@@ -13,10 +13,6 @@
 .dropdown.icon {
   font-family: fontawesome !important;
 }
-i.icon.bars {
-  font-size: 30px;
-  font-family: fontawesome !important;
-}
 * {
   font-family: "Roboto", sans-serif !important;
 }
@@ -124,11 +120,14 @@ p {
 }
 .menu-icons {
   margin-top: 36px;
+  z-index: 2;
+  position: relative;
+  left: -15px;
 }
 .ui.visible.left.overlay.sidebar {
   position: fixed;
   top: 0;
-  width: 60%;
+  width: 60% !important;
   background-color: #4c1b82;
 }
 .imageAbout {
@@ -138,12 +137,21 @@ p {
 .ui.visible.left.overlay.sidebar.hide {
   visibility: hidden;
 }
+.phone-background-navbar{
+  background-color: #272727a6;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  z-index: 1;
+}
 
 .ui.visible.left.overlay.sidebar.slideIn {
   animation-name: slideIn;
   transition: all 0.2s;
   /* animation-timing-function: ease-in; */
   animation-duration: 0.2s;
+  background-color: (0,0,0,.2);
 }
 
 @keyframes slideIn {
@@ -289,10 +297,11 @@ button.ui.button.right.floated.positive {
   width: 40%;
 }
 .backMember {
-  padding: 4% 0px 0px 0px;
   background-color: #f0f1f3;
 }
 .backMember h1 {
+  padding: 40px 0px 20px 0;
+  margin: 0;
   font-size: 30px;
   font-weight: 500;
 }
@@ -329,8 +338,12 @@ button.ui.button.right.floated.positive {
   height: 200px !important;
   transition: 0.2s;
 }
+.backMember img{
+  transition: 0.3s;
+}
 .backMember img:hover {
   box-shadow: 0 10px 28px 0 hsla(269, 64%, 48%, 0.37);
+  transform: translateY(-5px);
 }
 
 .menu .item {
@@ -371,6 +384,7 @@ button.ui.button.right.floated.positive {
 .ui.basic.btnLearnMore:hover {
   box-shadow: none;
   transition: 0.3s !important;
+  transform: translateY(-4px);
 }
 /* newsandevent */
 
@@ -437,6 +451,7 @@ button.ui.button.right.floated.positive {
 .ui.basic.btnInformation:hover {
   box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.21);
   color: #762cc7 !important;
+  transform: translateY(-4px)
 }
 
 .newsDetailo h4 {
@@ -507,9 +522,12 @@ button.ui.button.right.floated.positive {
 p {
   font-size: 16px !important;
 }
+.indexShadow{
+  transition: 0.3s;
+}
 .indexShadow:hover {
   box-shadow: 0 6px 20px rgba(64, 5, 112, 0.2);
-  transition: 0.2s;
+  transform: translateY(-10px);
 }
 .footerIcon img {
   height: 1.4em !important;
@@ -529,10 +547,10 @@ p {
   top: 35px;
   left: 0;
 }
-.imenu {
-  width: 100%;
-  height: 50px;
-  background: rgb(75, 187, 225);
+.ui.menu.mobile-navbar{
+  background-color: #47278a;
+  margin: 0px !important;
+  padding: 0px !important;
 }
 
 img.imgfooter {
@@ -620,8 +638,6 @@ img.imgfooter {
 }
 
 @media only screen and (max-width: 979px) {
-  .ui.secondary.menu.navbars {
-  }
   .ui.secondary.menu.navbars img {
     height: 60px;
     padding-left: 0%;
@@ -676,9 +692,6 @@ img.imgfooter {
   .mobilenav {
     display: block;
   }
-  .hd {
-    display: none;
-  }
   .backBanner {
     height: 100vw !important;
   }
@@ -716,14 +729,36 @@ img.imgfooter {
   }
 
   .backMember img {
-    padding: 4%;
+    padding: 0%;
     border-radius: 100%;
     width: 200px !important;
     height: 200px !important;
   }
+  .shadowIndex{
+    box-shadow: none;
+  }
+  .imageAbout {
+    width: 100%;
+  }
+  .investorfooter h1 {
+    padding-top: 8%;
+    padding-bottom: 5%;
+  }
+  .aboutsmall p{
+    font-size: 16px !important
+  }
+  .descTitle1 h1{
+    margin-top: -80px;
+  }
 }
 
 @media only screen and (max-width: 480px) {
+  .newsAndEvent {
+    padding: 8% 0 6% 0;
+  }
+  .backInformation{
+    background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  }
   .imenu {
     display: block;
   }
@@ -740,8 +775,13 @@ img.imgfooter {
   .bannerContent {
     width: 100%;
   }
+  .bannerContent h2{
+    font-size: 24px !important;
+    margin: 0px;
+  }
   .bannerContent .paragraph {
     padding: 14px 0px;
+    font-size: 16px !important;
   }
   button.ui.basic.button.btnLearnMore {
     margin: 0;
@@ -769,14 +809,24 @@ img.imgfooter {
   .column .backFineus p {
     margin-left: 10%;
   }
+  .backInformation h1{
+    font-size: 21px!important;
+  }
+  .backInformation p{
+    font-size: 16px!important;
+    color: rgba(255, 255, 255, 0.82)!important;
+  }
+  .imageIndex{
+    padding: 0px 15% !important;
+  }
+  p{
+    font-size: 16px !important;
+  }
 }
 
 @media only screen and (max-width: 375px) {
   .imenu {
     display: block;
-  }
-  .hd {
-    display: none;
   }
   .mobilenav {
     display: block;
@@ -806,9 +856,6 @@ img.imgfooter {
 @media only screen and (max-width: 320px) {
   .imenu {
     display: block;
-  }
-  .hd {
-    display: none;
   }
   .mobilenav {
     display: block;
