--- a/public/css/site.css
+++ b/public/css/site.css
@@ -462,6 +462,7 @@ button.ui.button.right.floated.positive {
 }
 .newsDetailo p {
   text-align: center;
+  margin: 4px;
   color: #979a9a !important;
 }
 
