--- a/public/css/site.css
+++ b/public/css/site.css
@@ -504,9 +504,11 @@ button.ui.button.right.floated.positive {
 }
 .backgroundEvent {
   /* background-color: #e4e4e4; */
-  padding: 0px 10px 10px 10px !important;
+  /* padding: 0px 10px 10px 10px !important; */
+  padding: 0px 15px !important;
   color: #fff !important;
   border-radius: 0px 0px 5px 5px;
+  height: 12vw;
   box-shadow: 0 10px 28px 0 hsla(210, 8%, 54%, 0.2);
 }
 .eventImage {
@@ -517,7 +519,7 @@ button.ui.button.right.floated.positive {
   padding-top: 20px;
 }
 .badge {
-  background-color: #063e63;
+  background-color: #0072bc;
   display: inline-block;
   padding: 0px 10px;
   border-radius: 4px;
@@ -533,6 +535,7 @@ p {
 }
 .indexShadow {
   transition: 0.3s;
+  box-shadow: 0 10px 28px 0 hsla(210, 8%, 54%, 0.2);
 }
 .indexShadow:hover {
   box-shadow: 0 6px 20px rgba(189, 189, 189, 0.2);
