--- a/public/css/site.css
+++ b/public/css/site.css
@@ -126,7 +126,7 @@ p {
   position: fixed;
   top: 0;
   width: 60% !important;
-  background-color: #4c1b82;
+  background-color: #0072bc;
 }
 .imageAbout {
   transform: scale(1.1);
@@ -505,11 +505,15 @@ button.ui.button.right.floated.positive {
 .backgroundEvent {
   /* background-color: #e4e4e4; */
   /* padding: 0px 10px 10px 10px !important; */
-  padding: 0px 15px !important;
+  padding: 0px 15px 20px 15px !important;
   color: #fff !important;
   border-radius: 0px 0px 5px 5px;
-  height: 12vw;
-  box-shadow: 0 10px 28px 0 hsla(210, 8%, 54%, 0.2);
+}
+.shadowEvent {
+  box-shadow: 0 0 40px 0 rgba(197, 197, 197, 0.85);
+  border-radius: 5px;
+  transition: 0.3s;
+  cursor: pointer;
 }
 .eventImage {
   border-radius: 5px 5px 0px 0px;
@@ -560,7 +564,7 @@ p {
   left: 0;
 }
 .ui.menu.mobile-navbar {
-  background-color: #47278a;
+  background-color: #0072bc;
   margin: 0px !important;
   padding: 0px !important;
 }
@@ -575,6 +579,21 @@ img.imgfooter {
 
 .sw-navbar {
   background-color: #063e63;
+}
+
+.shadowEvent {
+  box-shadow: 0 0 40px 0 rgba(197, 197, 197, 0.85);
+  border-radius: 5px;
+  transition: 0.3s;
+  /* height: 24vw; */
+  cursor: pointer;
+}
+
+
+.shadowEvent:hover {
+  box-shadow: 0 11px 30px -5px rgba(43, 43, 43, 0.65);
+  border-radius: 5px;
+  transform: translateY(-5px);
 }
 
 @media only screen and (max-width: 1920px) {
