--- a/public/css/site.css
+++ b/public/css/site.css
@@ -105,7 +105,7 @@ p {
 }
 .backAbout h1 {
   font-size: 30px;
-  padding-top: 15%;
+  /* padding-top: 15%; */
   font-weight: 500;
 }
 .backAbout p {
@@ -588,7 +588,6 @@ img.imgfooter {
   /* height: 24vw; */
   cursor: pointer;
 }
-
 
 .shadowEvent:hover {
   box-shadow: 0 11px 30px -5px rgba(43, 43, 43, 0.65);
