--- a/public/css/site.css
+++ b/public/css/site.css
@@ -377,6 +377,14 @@ button.ui.button.right.floated.positive {
   padding: 10px 0px;
   color: #edecec;
 }
+.imageCenter {
+  position: absolute !important;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: auto;
+  transform: translate(-50%, -50%);
+}
 .bannerContent p {
   padding-left: 20%;
 }
@@ -691,6 +699,14 @@ img.imgfooter {
 }
 
 @media only screen and (max-width: 979px) {
+  .imageCenter {
+    position: relative !important;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100%;
+    height: auto;
+    transform: none;
+  }
   .ui.secondary.menu.navbars img {
     height: 60px;
     padding-left: 0%;
